# vk_compute_cpp

./: CMakeLists.txt  README.md  app.cpp  app.h  inc.h  prop.h  shader.comp  util.cpp  util.h
vk/: cmd.cpp
vk/core/: device.cpp  instance.cpp
